amicorpus processing done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
     "cSpell.words": [
         "amicorpus",
-        "diarizers"
+        "batchify",
+        "diarizers",
+        "Libri",
+        "mtech",
+        "pycache",
+        "rrka",
+        "rrkas"
     ]
 }
